fixes login on mobile

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -55,5 +55,6 @@
 @media (max-width: 435px) {
   .login__container {
     padding: 50px 25px;
+    margin-bottom: 50px;
   }
 }
